[gd_scene load_steps=12 format=3 uid="uid://c4yj3ruae1o2a"]

[ext_resource type="Script" uid="uid://bnf5bpphmcvd" path="res://Scenes/Main/main.gd" id="1_8y1ww"]
[ext_resource type="Script" uid="uid://bs5bww03eoy5k" path="res://Scenes/Main/MainCamera.gd" id="2_souws"]
[ext_resource type="AudioStream" uid="uid://x5bjbwnpmbu2" path="res://Audio/y2mate.is - Cash Money Sound Effect-K20pt6xVet0-48k-1695147773-[AudioTrimmer.com].mp3" id="2_v8bjd"]
[ext_resource type="Texture2D" uid="uid://cqesbvxny8xjt" path="res://Icons/Main/10.jpg" id="6_kvrof"]
[ext_resource type="Texture2D" uid="uid://dj5npoy0uxnkv" path="res://Icons/Main/mmq-money-icon.png" id="7_hfg1r"]
[ext_resource type="Texture2D" uid="uid://gssa8bf510pq" path="res://Icons/Main/ScreamEmoji.png" id="7_isqho"]
[ext_resource type="PackedScene" uid="uid://bwn4sx63iopgm" path="res://Scenes/Shop/shop.tscn" id="128_qdpqk"]
[ext_resource type="PackedScene" uid="uid://b8eoa8usrok3e" path="res://Scenes/Casino/casino.tscn" id="130_2dwlq"]
[ext_resource type="PackedScene" uid="uid://2q2vnpilk0n6" path="res://Scenes/Non-game/warning_message.tscn" id="131_7lvsh"]
[ext_resource type="Texture2D" uid="uid://di5pgyor37kst" path="res://Icons/Shop/CoinIcon.png" id="131_n6pbr"]
[ext_resource type="PackedScene" uid="uid://bqeqmesqlhd1d" path="res://Scenes/Shop/gem_shop.tscn" id="132_5xv4m"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1096.0
offset_top = -336.0
offset_right = -1096.0
offset_bottom = -336.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8y1ww")

[node name="MainCamera" type="Camera2D" parent="." groups=["cameras", "maincam"]]
position = Vector2(577, 323)
script = ExtResource("2_souws")
metadata/_edit_lock_ = true

[node name="LeaderboardTitle" type="Panel" parent="MainCamera"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 379.0
offset_top = -287.0
offset_right = 574.0
offset_bottom = -224.0
grow_horizontal = 2
metadata/_edit_lock_ = true

[node name="Text" type="Label" parent="MainCamera/LeaderboardTitle"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.5
offset_top = -28.5
offset_right = 93.5
offset_bottom = 58.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 19
text = "Totally Real
Leaderboard:
"
metadata/_edit_lock_ = true

[node name="FakeLeaderboard" type="Panel" parent="MainCamera"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 336.0
offset_top = -218.0
offset_right = 574.0
offset_bottom = 273.0
grow_horizontal = 2

[node name="Names" type="Label" parent="MainCamera/FakeLeaderboard"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.0
offset_top = -245.5
offset_right = 112.0
offset_bottom = 244.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = -4
theme_override_font_sizes/font_size = 15
text = "Dereton: Infinity

Charlac: â˜­

Skye: 7777777

DrAgOn Ninja 
James XYZmoc
The Meme Thief: 177013

Finnfx: 42069

Rev: 1714

Kc: 211

CharlieCringe: 123

Longing String: 65

Thon: Seventen

Kneemund: -0

Rug: -1

Goaty: N/A"

[node name="CoinDisplay" type="Panel" parent="MainCamera"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -198.0
offset_top = -323.0
offset_right = 203.0
offset_bottom = -223.0
grow_horizontal = 2

[node name="CoinCounter" type="Label" parent="MainCamera/CoinDisplay"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -101.5
offset_top = 18.0
offset_right = 574.5
offset_bottom = 131.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "0 (broke assðŸ’€)
"
clip_text = true
metadata/_edit_lock_ = true

[node name="10" type="Sprite2D" parent="MainCamera"]
position = Vector2(-547, -168)
scale = Vector2(0.0478516, 0.063889)
texture = ExtResource("6_kvrof")

[node name="NGI-Review" type="Label" parent="MainCamera/10"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 7.83624
offset_top = -375.652
offset_right = 3410.84
offset_bottom = 459.348
grow_horizontal = 2
scale = Vector2(1.22484, 0.958391)
theme_override_font_sizes/font_size = 305
text = "\"Best game of all
time ever!! 10/10\" - NGI"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ScreamEmoji" type="Sprite2D" parent="MainCamera"]
position = Vector2(-363, 300)
scale = Vector2(0.0682566, 0.0401716)
texture = ExtResource("7_isqho")

[node name="FreeRobux" type="Button" parent="MainCamera/ScreamEmoji"]
offset_left = -3135.0
offset_top = -573.0
offset_right = 1845.0
offset_bottom = 473.0
scale = Vector2(0.56532, 1.07269)
theme_override_font_sizes/font_size = 441
text = "<Press for free robux!!>"
flat = true

[node name="Main Button" type="Button" parent="MainCamera"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -199.0
offset_right = 196.0
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(194, 203)
theme_override_font_sizes/font_size = 40
icon = ExtResource("7_hfg1r")
flat = true
icon_alignment = 1
expand_icon = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="MainCamera/Main Button"]
position = Vector2(-364, -249)
stream = ExtResource("2_v8bjd")
volume_db = 9.964

[node name="SaveData" type="Button" parent="MainCamera"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -570.0
offset_top = -317.0
offset_right = -381.0
offset_bottom = -274.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.209172, 0.63922, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Save Progress"

[node name="ShopButton" type="Button" parent="MainCamera"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -571.5
offset_top = -76.0
offset_right = -438.5
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Spend Coins & Gems
to buy items & upgrades"
theme_override_font_sizes/font_size = 20
text = "Go To Shop
"

[node name="CoinIcon" type="Sprite2D" parent="MainCamera"]
position = Vector2(-147, -274)
scale = Vector2(0.0885714, 0.0885714)
texture = ExtResource("131_n6pbr")

[node name="CasinoButton" type="Button" parent="MainCamera"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -572.0
offset_top = 8.0
offset_right = -438.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Spend Coins & Gems
for a chance to win prizes!"
theme_override_font_sizes/font_size = 20
text = "Go To Casino
"

[node name="ShopCamera" type="Camera2D" parent="." groups=["cameras"]]
position = Vector2(588, 1005)

[node name="Shop" parent="ShopCamera" instance=ExtResource("128_qdpqk")]
offset_left = -577.0
offset_top = -325.0
offset_right = -577.0
offset_bottom = -325.0

[node name="CasinoCamera" type="Camera2D" parent="."]
position = Vector2(568, 2616)

[node name="casino" parent="CasinoCamera" instance=ExtResource("130_2dwlq")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -3.0
offset_top = -3.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 1
grow_vertical = 1

[node name="WarningMessageCam" type="Camera2D" parent="."]
position = Vector2(566, -460)
metadata/_edit_group_ = true

[node name="WarningMessage" parent="WarningMessageCam" instance=ExtResource("131_7lvsh")]

[node name="GemShopCam" type="Camera2D" parent="."]
position = Vector2(588, 1761)

[node name="GemShop" parent="GemShopCam" instance=ExtResource("132_5xv4m")]
offset_left = -576.0
offset_top = -324.0
offset_right = -576.0
offset_bottom = -324.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 1796.0
offset_top = -646.0
offset_right = 3061.0
offset_bottom = -389.0
text = "Things to do:
- Make Gems work (Make Gem Shop)
- Add dynamic music (Changes based on how many coins you have)
- Create world map to go to different locations in plane
- Create somewhere to use gun (shooting range? kill zombies? something more creative/funny?)
- Create \"Casino\" with some gambling games
- Replace autoclicker with slavery( what the fuck?????)
- Add purchasable Nuclear Reactor that generates a fuckton of money but needs to be maintained (can explode/meltdown if not maintained?)
- Add Jeff Bezos (or character based off him), tries to scam you into buying amazon prime, if he succeeds your money rapidly drains until you cancel the subscription
- Allow players to enter a name (some secrets can activate with certain names)"

[node name="AutoClickTimer" type="Timer" parent="."]
autostart = true

[node name="AutosaveTimer" type="Timer" parent="."]
wait_time = 30.0

[connection signal="pressed" from="MainCamera/ScreamEmoji/FreeRobux" to="." method="_on_secret_button_pressed"]
[connection signal="button_down" from="MainCamera/Main Button" to="." method="_on_main_button_button_down"]
[connection signal="button_up" from="MainCamera/Main Button" to="." method="_on_main_button_button_up"]
[connection signal="mouse_entered" from="MainCamera/Main Button" to="." method="_on_main_button_mouse_entered"]
[connection signal="mouse_exited" from="MainCamera/Main Button" to="." method="_on_main_button_mouse_exited"]
[connection signal="pressed" from="MainCamera/Main Button" to="." method="_on_main_button_pressed"]
[connection signal="pressed" from="MainCamera/SaveData" to="." method="_on_save_data_pressed"]
[connection signal="pressed" from="MainCamera/ShopButton" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="MainCamera/CasinoButton" to="." method="_on_casino_button_pressed"]
[connection signal="timeout" from="AutoClickTimer" to="." method="_on_auto_click_timer_timeout"]
[connection signal="timeout" from="AutosaveTimer" to="." method="_on_autosave_timeout"]
